fixed security things